Stack & Model - Code refactoring